<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/string_youNiDanChe"
        android:textColor="#48D1CC"
        android:textSize="25sp"
        />

    <EditText
        android:id="@+id/login_username_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/string_inputUsername"
        android:inputType="text"
        android:maxLines="1"
        android:maxLength="16"
        android:textColorHint="@android:color/darker_gray"
        />

    <EditText
        android:id="@+id/login_pwd_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/string_inputPassword"
        android:maxLines="1"
        android:inputType="textPassword"
        android:maxLength="20"
        android:textColorHint="@android:color/darker_gray"
        />

    <Button
        android:id="@+id/activity_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:background="@drawable/login_btn_state"
        android:text="@string/string_login"
        />

</LinearLayout>